<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">AC</string>
    <string name="back">C</string>
    <string name="mod">%</string>
    <string name="div">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mul">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="double_zero">00</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="divide_by_zero">Can\'t divide by 0</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>

    <string name="user_name_empty">Please Enter User Name</string>
    <string name="password_empty">Please Enter Password</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="or_login_from">Or login from</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="welcome">welcome</string>
    <string name="users">Users</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>